# translation_methods

./: CMakeLists.txt
Bison_PascaltoC/: CMakeLists.txt  expression.l  expression.lexer.cpp  expression.lexer.hpp  expression.tab.cpp  expression.tab.hpp  expression.y  main.cpp
C_logic/: Auto.txt  CMakeLists.txt  Constructor.cpp  Constructor.h  LL1_auto.txt  Parser.cpp  Parser.h  expression.h  main.cpp
Generator/: CMakeLists.txt  main_2nd.cpp  main_expr.cpp
Generator/2nd/: input.l  input.y  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
Generator/Lexer/: CMakeLists.txt  LexGen.cpp  LexGen.h
Generator/Lexer/parser_lexer/: CMakeLists.txt  expr_lexer.l  expr_lexer.y  expression.tab.cpp  expression.tab.hpp  lexer.h  lexer_parser.cpp  lexer_parser.hpp
Generator/Parser/: CMakeLists.txt  ParserGen.cpp  ParserGen.h
Generator/Parser/parser_parser/: CMakeLists.txt  expr_parser.l  expr_parser.y  expression.tab.cpp  expression.tab.hpp  lexer_parser.cpp  lexer_parser.hpp  parser.h
Generator/expr/: input.l  input.y  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  pow.h
